Fix left alignment of toggles with input fields, and vertical alignment of progress element

--- a/src/stylesheets/default.css
+++ b/src/stylesheets/default.css
@@ -495,6 +495,7 @@ input:not([type="radio"]), select {
 	height: 40px;
 	width: 100%;
 	margin: 0;
+	padding: 0;
 	font-family: inherit;
 	font-weight: inherit;
 	font-size: inherit;
@@ -635,6 +636,10 @@ input[type="checkbox"]:checked + label:after {
 /* Hide registration message, sync controls, progress bar, status row, sync error & import changes only rows by default */
 #registrationMessage, #syncControls, #progress, #statusRow, #syncErrors, #importChangesOnlyRow {
 	display: none;
+}
+
+#progress {
+	margin: 12px 0;
 }
 
 /* Sync errors */
